# claude

./: .gitignore  INITIAL.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test_results.json
.claude/: settings.local.json
PRPs/: model-perplexity-evaluation.md
examples/: perplexity_llm_claude.py
src/config/: __init__.py  model_configs.py
src/perplexity/: __init__.py  cli.py  dataset_utils.py  evaluator.py  model_loader.py  models.py  monitoring.py
tests/: __init__.py  conftest.py  test_dataset_utils.py  test_evaluator.py  test_model_loader.py
use-cases/pydantic-ai/examples/testing_examples/: test_agent_patterns.py
